# house-dancer

./: CMakeLists.txt
blocks/Cinder-KCB2/include/: Kinect2.h
blocks/Cinder-KCB2/proj/cmake/: Cinder-KCB2Config.cmake
blocks/Cinder-Link/include/: LinkWrapper.h
blocks/Cinder-Link/proj/cmake/: Cinder-LinkConfig.cmake
blocks/Cinder-Link/src/: LinkWrapper.cpp
src/: HouseDancerApp.cpp  SavitzkyGolayFilter.cpp  SavitzkyGolayFilter.h
src/fonts/: FontAwesome-tweak.h  RobotoRegular.h
